Adding buttons and event listeners

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		
+		<button id="rock">Rock</button>
+		<button id="paper">Paper</button>
+		<button id="scissors">Scissors</button>
 		
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
