Adding value to button

--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<button id="rock">Rock</button>
-		<button id="paper">Paper</button>
-		<button id="scissors">Scissors</button>
+		<div class="display"></div>
+		<h2>Player Score</h2>
+		<div class="playerScore">0</div>
+		<h2>Computer Score</h2>
+		<div class="compScore">0</div>
+		<button id="rock" value="rock">Rock</button>
+		<button id="paper" value="paper">Paper</button>
+		<button id="scissors" value="scissors">Scissors</button>
 		
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
