--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<h2>Result</h2>
 		<div class="display"></div>
 		<h2>Player Score</h2>
-		<div class="playerScore">0</div>
+		<div class="playerScore">-</div>
 		<h2>Computer Score</h2>
-		<div class="compScore">0</div>
-		<button id="rock" value="rock">Rock</button>
-		<button id="paper" value="paper">Paper</button>
-		<button id="scissors" value="scissors">Scissors</button>
+		<div class="compScore">-</div>
+		<button class="input" value="rock">Rock</button>
+		<button class="input" value="paper">Paper</button>
+		<button class="input" value="scissors">Scissors</button>
 		
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
